--- a/auth/appsettings.json
+++ b/auth/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DBConnectionString" : "Server=(localdb)\\MSSQLLocalDB;Database=Users;Integrated Security=true" 
 }
